force-app/main/default/objects/Volunteers_Settings__c/fields/Grant_Guest_Users_Update_Access__c.field-meta.xml
<CustomField>
    <fullName>Grant_Guest_Users_Update_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow guest users to update records based on their Create access.</inlineHelpText>
    <label>Grant Guest Users Update Access</label>
    <type>Checkbox</type>
</CustomField>