force-app/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Report_Hours_Filtered__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Report_Hours_Filtered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Personal Site Report Hours Filter By Contact</description>
    <inlineHelpText>Personal Site Report Hours Filter By Contact</inlineHelpText>
    <label>Personal Site Report Hours Filtered</label>
    <type>Checkbox</type>
</CustomField>