force-app/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Requires_URL_Email_Match__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Requires_URL_Email_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the Personal Site link needs to include the Email URL parameter, which V4S uses to match against an email field on the specified Contact.</description>
    <inlineHelpText>If selected, the Personal Site link needs to include the Email URL parameter, which V4S uses to match against an email field on the specified Contact.</inlineHelpText>
    <label>Personal Site Requires URL Email Match</label>
    <type>Checkbox</type>
</CustomField>