force-app/main/default/objects/Volunteers_Settings__c/fields/Recurring_Job_Future_Months__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Job_Future_Months__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Determines how many months into the future Recurring Job Shifts are scheduled. Scheduling more than 4 months may cause a Salesforce CPU time LIMIT exceeded error, which would prevent the Job Scheduler from completing.</description>
    <inlineHelpText>Determines how many months into the future Recurring Job Shifts are scheduled. Scheduling more than 4 months may cause a Salesforce CPU time LIMIT exceeded error, which would prevent the Job Scheduler from completing.</inlineHelpText>
    <label>Recurring Job Future Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>