force-app/main/default/objects/Volunteers_Settings__c/fields/Signup_Bucket_Account_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Signup_Bucket_Account_On_Create__c</fullName>
    <inlineHelpText>The name of the Account to use when creating new Contacts during Signup. If you are using the Nonprofit Success Pack One-to-One model, leave this setting blank. If you are using the bucket model, set this to the name of the Account, usually &apos;Individual&apos;.</inlineHelpText>
    <label>Signup Bucket Account On Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>