force-app/main/default/objects/Volunteers_Settings__c/fields/Signup_Creates_Contacts_If_No_Match__c.field-meta.xml
<CustomField>
    <fullName>Signup_Creates_Contacts_If_No_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected, the Volunteer Signup form creates a new Contact record, if Signup Matches Existing Contacts is selected and no existing Contact is found. Otherwise, the form creates a Lead.</inlineHelpText>
    <label>Signup Creates Contacts If No Match</label>
    <type>Checkbox</type>
</CustomField>